Update master details to Table version

--- a/app/applibrary/webapp/i18n/i18n.properties
+++ b/app/applibrary/webapp/i18n/i18n.properties
@@ -4,7 +4,7 @@
 
 #XTIT: Application name
 appTitle=App Library
-appCatDesc = Category Details
+appCatDesc = Category Apps
 appDesc = App Details
 
 #YDES: Application description
@@ -74,7 +74,7 @@ delete_confirm_detail = Are you sure delete this?
 ok = OK
 edit_category_name = Edit Category Name
 edit = Edit
-count = Count : 
+count = Count 
 mind_set_teams = MindSet Teams
 mind_set_teams_email = Enter Email
 first_name = First Name
@@ -82,3 +82,6 @@ last_name = Last Name
 noObjectFoundText = Please select master data...!
 detailTitle = Detail Page
 hours = Hours
+persentage = Percentage
+selectData = PLease select list item...!
+categories = Categories
