--- a/app/applibrary/webapp/i18n/i18n.properties
+++ b/app/applibrary/webapp/i18n/i18n.properties
@@ -4,7 +4,7 @@
 
 #XTIT: Application name
 appTitle=App Library
-appCatDesc = Category Apps
+appCatDesc = Available Apps
 appDesc = App Details
 
 #YDES: Application description
@@ -32,8 +32,10 @@ demo_ready = Demo Ready
 demo_video =Demo Video
 integrate_to_appLibrary =Integrate to AppLibrary
 semantic_obj = Semantic Obj
-category_name = Category Name
-category_type = Category Type
+category_name1 = Category Name
+category_name = Functional Area
+category_type1 = Category Type
+category_type = Solution Type
 create_catalog = Create Catalog
 create = Create
 cancel = Cancel
@@ -55,7 +57,7 @@ scrum_master = Scrum Master
 estimations = Estimations
 git_link = GIT Link
 sales_team = Sales Team
-sow_link = SOW Link
+sow_link = Sales Docs
 deleteoredit = Delete/Edit
 client_name = Client Name
 location = Location
@@ -74,7 +76,8 @@ delete_confirm_detail = Are you sure delete this?
 ok = OK
 edit_category_name = Edit Category Name
 edit = Edit
-count = Count 
+count1 = Count 
+count = of Apps 
 mind_set_teams = MindSet Teams
 mind_set_teams_email = Enter Email
 first_name = First Name
@@ -82,6 +85,6 @@ last_name = Last Name
 noObjectFoundText = Please select master data...!
 detailTitle = Detail Page
 hours = Hours
-persentage = Percentage
+persentage = Status %
 selectData = PLease select list item...!
 categories = Categories
